--- a/package/src/app/layouts/full/header/header.component.html
+++ b/package/src/app/layouts/full/header/header.component.html
@@ -6,27 +6,8 @@
   <!-- --------------------------------------------------------------- -->
 
   <!-- --------------------------------------------------------------- -->
-  <!-- Notification Dropdown -->
-  <!-- --------------------------------------------------------------- -->
-
-  <button mat-icon-button aria-label="Notifications">
-    <i-tabler class="d-flex" name="bell" matBadge="9" matBadgeColor="primary"></i-tabler>
-  </button>
-
-  <span class="flex-1-auto"></span>
-
-  <!-- --------------------------------------------------------------- -->
   <!-- profile Dropdown -->
   <!-- --------------------------------------------------------------- -->
-  <a
-    mat-flat-button
-    color="primary"
-    href="https://www.wrappixel.com/templates/spike-angular-admin-template/"
-    target="_blank"
-    class="d-flex justify-content-center"
-  >
-    Upgrade to Pro
-  </a>
   <button
     mat-icon-button
     [matMenuTriggerFor]="profilemenu"
@@ -42,20 +23,7 @@
     <button mat-menu-item>
       <mat-icon class="d-flex align-items-center"
         ><i-tabler name="user" class="icon-18 d-flex"></i-tabler></mat-icon
-      >My Profile
-    </button>
-    <button mat-menu-item>
-      <mat-icon class="d-flex align-items-center"
-        ><i-tabler name="mail" class="icon-18 d-flex"></i-tabler></mat-icon
-      >My Account
-    </button>
-    <button mat-menu-item>
-      <mat-icon class="d-flex align-items-center"
-        ><i-tabler
-          name="list-check"
-          class="icon-18 d-flex"
-        ></i-tabler></mat-icon
-      >My Task
+      >Mi perfil
     </button>
 
     <div class="p-x-12 m-t-12">
@@ -64,7 +32,7 @@
         mat-flat-button
         color="primary"
         class="w-100"
-        >Logout</a
+        >Cerrar cuenta</a
       >
     </div>
   </mat-menu>
