--- a/package/src/app/pages/extra/sample-page/sample-page.component.html
+++ b/package/src/app/pages/extra/sample-page/sample-page.component.html
@@ -3,7 +3,7 @@
 <!-- ============================================================== -->
 <mat-card class="cardWithShadow">
     <mat-card-content>
-      <mat-card-title>Pagina de Ejemplo</mat-card-title>
-      <mat-card-subtitle class="mat-body-1">This is test page</mat-card-subtitle>
+      <mat-card-title>BABY BLUE</mat-card-title>
+      <mat-card-subtitle class="mat-body-1">Terminos y condiciones</mat-card-subtitle>
     </mat-card-content>
   </mat-card>
