--- a/package/src/app/pages/extra/icons/icons.component.html
+++ b/package/src/app/pages/extra/icons/icons.component.html
@@ -3,10 +3,8 @@
 <!-- ============================================================== -->
 <mat-card class="cardWithShadow">
     <mat-card-content>
-      <mat-card-title>Icons</mat-card-title>
-      <mat-card-subtitle class="mat-body-1 m-b-24">Tabler Icons</mat-card-subtitle>
-      <iframe src="https://tabler-icons.io/" title="Tabler Icons" width="100%" height="700px" allowfullscreen frameBorder="0">
-    </iframe>
+      <mat-card-title>Información</mat-card-title>
+      <mat-card-subtitle class="mat-body-1 m-b-24">BABYBLUE</mat-card-subtitle>
     </mat-card-content>
   </mat-card>
   
