--- a/package/src/app/layouts/full/sidebar/sidebar.component.html
+++ b/package/src/app/layouts/full/sidebar/sidebar.component.html
@@ -9,11 +9,11 @@
     <a
       mat-flat-button
       color="primary"
-      href="https://www.wrappixel.com/templates/spike-angular-admin-template/"
+      href="http://localhost:4200/authentication/login"
       target="_blank"
       class="d-flex justify-content-center w-100"
     >
-      Upgrade to Pro
+      Salir
     </a>
   </div>
 </div>
