--- a/package/src/app/pages/dashboard/dashboard.component.html
+++ b/package/src/app/pages/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-  <div class="col-lg-8">
+<div class="col-lg-8">
     <mat-card class="cardWithShadow">
       <mat-card-content class="p-24">
         <mat-card-title>VENDEDORES DE LA TIENDA </mat-card-title>
@@ -15,7 +15,7 @@
               </th>
               <td mat-cell *matCellDef="let element">
                 <div class="d-flex align-items-center">
-                  <img  
+                  <img
                     [src]="element.imagePath"
                     alt="users"
                     width="50"
@@ -75,28 +75,28 @@
                 Estatus
               </th>
               <td mat-cell *matCellDef="let element">
-                <ng-template [ngIf]="element.priority == 'Available'">
+                <ng-template [ngIf]="element.priority == 'Activo'">
                   <span
                     class="bg-light-success text-success rounded f-w-600 p-y-6 p-x-16 f-s-14"
                   >
                     {{ element.priority | titlecase }}
                   </span>
                 </ng-template>
-                <ng-template [ngIf]="element.priority == 'In Class'">
+                <ng-template [ngIf]="element.priority == 'Activo'">
                   <span
                     class="bg-light-primary text-primary rounded f-w-600 p-y-6 p-x-16 f-s-14"
                   >
                     {{ element.priority | titlecase }}
                   </span>
                 </ng-template>
-                <ng-template [ngIf]="element.priority == 'Absent'">
+                <ng-template [ngIf]="element.priority == 'Activo'">
                   <span
                     class="bg-light-error text-error rounded f-w-600 p-y-6 p-x-16 f-s-14"
                   >
                     {{ element.priority | titlecase }}
                   </span>
                 </ng-template>
-                <ng-template [ngIf]="element.priority == 'On Leave'">
+                <ng-template [ngIf]="element.priority == 'Activo'">
                   <span
                     class="bg-light-warning text-warning rounded f-w-600 p-y-6 p-x-16 f-s-14"
                   >
