--- a/package/src/app/pages/ui-components/badge/badge.component.html
+++ b/package/src/app/pages/ui-components/badge/badge.component.html
@@ -8,6 +8,19 @@
         <p>
           <span class="f-w-500 text-muted">Registro de tennis para el establecimiento de Baby BlUE </span>
         </p>
+        <form>
+          <label for="brand">Marca:</label><br>
+          <input type="text" id="brand" name="brand"><br>
+          <label for="model">Modelo:</label><br>
+          <input type="text" id="model" name="model"><br>
+          <label for="color">Color:</label><br>
+          <input type="text" id="color" name="color"><br>
+          <label for="number">Número:</label><br>
+          <input type="text" id="number" name="number"><br>
+          <label for="price">Precio:</label><br>
+          <input type="text" id="price" name="price"><br><br>
+          <input type="submit" value="Agregar"><br>
+        </form>
       </mat-card-content>
     </mat-card>
   </mat-card-content>
