--- a/package/src/app/pages/extra/icons/icons.component.html
+++ b/package/src/app/pages/extra/icons/icons.component.html
@@ -1,6 +1,16 @@
-<mat-card class="cardWithShadow">
-    <mat-card-content>
-      <mat-card-title>Información</mat-card-title>
-      <mat-card-subtitle class="mat-body-1 m-b-24">BABYBLUE</mat-card-subtitle>
-    </mat-card-content>
-  </mat-card>
+<mat-card-content>
+  <mat-card-title>INFORMACION DE LA TIENDA</mat-card-title>
+  <br>
+  <br>
+  <mat-card-subtitle class="mat-body-1 m-b-24">BABYBLUE</mat-card-subtitle>
+  <p>
+    La tienda BabyBlue fue inaugurada en el año 2021 con la finalidad de ofrecer venta de tenis al público.
+    Actualmente cuenta con un inventario manual el cual genera problemas como pérdidas económicas, dificultades para
+    satisfacer las necesidades y expectativas del cliente.
+  </p>
+  <p>
+    Por lo tanto, se propone la creación de un prototipo de sistema de control de inventario que ayudará a reducir
+    costos innecesarios, ofrecer un mejor servicio al cliente y tomar decisiones basadas en datos precisos. Esperando
+    aumentar la rentabilidad de la tienda.
+  </p>
+</mat-card-content>
