--- a/package/src/app/pages/extra/sample-page/sample-page.component.html
+++ b/package/src/app/pages/extra/sample-page/sample-page.component.html
@@ -1,9 +1,40 @@
-<!-- ============================================================== -->
-<!-- Simple four boxes Row -->
-<!-- ============================================================== -->
 <mat-card class="cardWithShadow">
-    <mat-card-content>
+  <mat-card-content>
       <mat-card-title>BABY BLUE</mat-card-title>
-      <mat-card-subtitle class="mat-body-1">Terminos y condiciones</mat-card-subtitle>
-    </mat-card-content>
-  </mat-card>
+      <br>
+      <mat-card-subtitle class="mat-body-1">Términos y condiciones</mat-card-subtitle>
+      <br>
+
+      <p>
+          <strong>1. Información de la Empresa:</strong> La Tienda de Zapatos es operada por [Nombre de la Empresa], con sede en [Dirección], y registrada bajo [Número de Registro]. Para ponerse en contacto con nosotros, utilice la información proporcionada en la sección de contacto en nuestro sitio web.
+      </p>
+
+      <p>
+          <strong>2. Precios y Pagos:</strong> Los precios de los productos están indicados en [moneda] e incluyen los impuestos correspondientes. Nos reservamos el derecho de cambiar los precios en cualquier momento sin previo aviso. Los pagos se pueden realizar a través de [métodos de pago aceptados], y la compra se considerará completa una vez que el pago haya sido procesado con éxito.
+      </p>
+
+      <p>
+          <strong>3. Envío:</strong> Realizamos envíos a direcciones dentro de [área de servicio]. Los costos de envío y los tiempos de entrega estimados se indicarán durante el proceso de compra. Nos esforzamos por procesar y enviar los pedidos lo más rápido posible, pero no nos hacemos responsables de los retrasos que puedan ocurrir después de que el paquete ha sido entregado al transportista.
+      </p>
+
+      <p>
+          <strong>4. Devoluciones y Reembolsos:</strong> Aceptamos devoluciones de productos en su estado original dentro de los [días específicos] días después de la entrega. Los costos de envío de devolución son responsabilidad del cliente, a menos que el producto sea defectuoso o incorrecto. Consulte nuestra política de devoluciones en nuestro sitio web para obtener información detallada.
+      </p>
+
+      <p>
+          <strong>5. Privacidad y Seguridad:</strong> Respetamos su privacidad y protegemos la seguridad de su información personal. Consulte nuestra política de privacidad para obtener detalles sobre cómo recopilamos, utilizamos y protegemos su información.
+      </p>
+
+      <p>
+          <strong>6. Propiedad Intelectual:</strong> Todos los contenidos en nuestro sitio web, incluidos textos, imágenes, logotipos, son propiedad de La Tienda de Zapatos y están protegidos por leyes de propiedad intelectual. No está permitido utilizar, copiar o reproducir estos contenidos sin nuestro consentimiento.
+      </p>
+
+      <p>
+          <strong>7. Cambios en los Términos y Condiciones:</strong> Nos reservamos el derecho de actualizar y modificar estos términos y condiciones en cualquier momento. Los cambios entrarán en vigencia inmediatamente después de su publicación en nuestro sitio web.
+      </p>
+
+      <p>
+          Al realizar una compra en La Tienda de Zapatos, usted acepta cumplir con estos términos y condiciones. Le recomendamos revisar periódicamente esta página para estar al tanto de cualquier cambio.
+      </p>
+  </mat-card-content>
+</mat-card>
