--- a/package/src/app/pages/ui-components/lists/lists.component.html
+++ b/package/src/app/pages/ui-components/lists/lists.component.html
@@ -63,7 +63,7 @@
 
 <mat-card class="cardWithShadow theme-card">
   <mat-card-header>
-    <mat-card-title class="m-b-0">Registro de tennis</mat-card-title>
+    <mat-card-title class="m-b-0">Registro de usuarios</mat-card-title>
   </mat-card-header>
   <mat-card-content class="b-t-1">
     <mat-card class="b-1 shadow-none">
